# rk3588_npu_freeze

./: .gitignore  CMakeLists.txt  main.cpp
assets/models/: scrfd_rk3588.rknn
libs/rockchips/: CMakeLists.txt
libs/rockchips/face_detector/include/: scrfd_detector.h
libs/rockchips/face_detector/src/: scrfd_detector.cpp
libs/rockchips/rknpu/include/: rknn.h
libs/rockchips/rknpu/src/: rknn.cpp
scripts/: opencv_build.sh  test_build.sh
